--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -192,8 +192,9 @@ main {
 
 .tarjeta-img img{
     width: 100%;
-    height: auto;
+    height: 300px;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 
@@ -297,7 +298,7 @@ main {
     margin-top: 50px;
 
     width: 70%;
-    height: 350px;
+    height: auto;
     
     display: flex;
     flex-direction: column;
@@ -316,7 +317,6 @@ main {
     width: 65%;
     line-height: 25px;
     margin-top: 20px;
-
 }
 
 .quienes_somos-second-box{
@@ -332,7 +332,6 @@ main {
 #quienes_somos-second-contenedor{
     width: 100%;
     height: 100%;
-    padding-top: 10px;
 
     display: flex;
     justify-content: space-evenly;
@@ -340,14 +339,14 @@ main {
 }
 
 .box{
-    width: 15%;
-    height: 70%;
-    background-color: #1a1a1a;
+    width: 20%;
+    height: auto;
+    background-color: #000000;
     padding: 20px;
     border-radius: 12px;
     color: white;
     text-align: center;
-    box-shadow: 0 0 10px rgb(236, 235, 235);
+    box-shadow: 0 0 10px  #86fd9a;
     transition: transform 0.3s ease;
 }
 
@@ -372,7 +371,8 @@ main {
 
 .box i {
     font-size: 70px;
-    margin-top: 45px;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 #icono-dieta {
