--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -297,8 +297,12 @@ main {
 }
 
 .box{
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+    justify-content: space-between;
     width: 20%;
-    height: auto;
+    height:70%;
     background-color: #000000;
     padding: 20px;
     border-radius: 12px;
@@ -314,7 +318,6 @@ main {
 
 .box h3 {
     font-size: 1.5em;
-    margin-bottom: 10px;
     color: white; 
 }
 
@@ -322,19 +325,15 @@ main {
     font-size: 1em;
     line-height: 1.5;
     padding-inline: 1.75rem;
-    margin-top: 25px;
-
-    height: 100px;
 }
 
 .box i {
     font-size: 70px;
-    margin-top: 20px;
-    margin-bottom: 40px;
+
 }
 
 #icono-dieta {
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 #icono-organizacion {
